--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
 }
 
 h1 {
+    text-align: center;
+    font-size: 2.750rem;
     letter-spacing: 4px;
     margin: 20px;
     font-family: 'Indie Flower', cursive;
@@ -22,6 +24,7 @@ h1 {
 }
 
 .gradient-result {
+    margin: 10px;
     background-color: rgb(227, 232, 236);
     border: 1px solid rgb(174, 192, 199);
 }
@@ -40,4 +43,5 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
